--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -43,10 +43,22 @@
                     <a class="nav-link" href="#">Coin pour phone <span class="sr-only">(current)</span></a>
                 </li>
             </ul>
-            <form class="form-inline mt-2 mt-md-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Votre recherche" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Rechercher</button>
-            </form>
+    
+        {% if app.user %}
+        <ul>
+            Hello {{ app.user.name }}!
+                <a href="{{ path('app_compte') }}">Mon compte</a>
+                <a href="{{ path('app_logout') }}">Se déconnecter</a>
+        </ul>
+            
+            {% else %}
+        <ul>           
+            <a href="{{ path('app_login') }}">Connexion </a>
+            <a href="{{ path('inscription') }}">Inscription </a>
+        </ul>
+        {% endif %}
+                  
+            
         </div>
     </nav>
 </header>
