modification du controller login et mise en place de logout sans controller

--- a/templates/compte/index.html.twig
+++ b/templates/compte/index.html.twig
@@ -6,7 +6,7 @@
 <h1>Bienvenue {{app.user.firstname }}</h1>
 
 <hr>
-- Changer mon mot de passe <br>
-- Ajouter une adresse <br>
-- Mes commandes <br>
+<a href="/reset-password">-Changer mot de passe</a> <br>
+<a href="">- Ajouter une adresse</a>  <br>
+<a href="">- Mes commandes</a> <br>
 {% endblock %}
