--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -1,29 +1,44 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}connexion{% endblock %}
-{% block stylesheets %}
-    <!-- Copy CSS from https://getbootstrap.com/docs/5.0/getting-started/introduction/#css -->
+{% block title %}LoginController!
+{% endblock %}
+
 {% block content %}
-{% if error %}
-        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+	<style>
+		.example-wrapper {
+			margin: 1em auto;
+			max-width: 800px;
+			width: 95%;
+			font: 18px / 1.5 sans-serif;
+		}
+		.example-wrapper code {
+			background: #F5F5F5;
+			padding: 2px 6px;
+		}
+	</style>
 
-    <form action="{{ path('app_login') }}" method="post">
+	<div class="example-wrapper">
+		{% if error %}
+			<div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+		{% endif %}
 
-        <label for="username">Email:</label>
-        <input type="text" id="username" name="_username" value="{{ last_username }}">
+		<form action="{{ path('app_login') }}" method="post">
+			<label for="username">Email:</label>
+			<input type="text" id="username" name="_username" value="{{ last_username }}">
+			<br>
+			<label for="password">Password:</label>
+			<input
+			type="password" id="password" name="_password">
 
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="_password">
+			{# If you want to control the URL the user is redirected to on success
+						        <input type="hidden" name="_target_path" value="/account"> #}
+			<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-        {# If you want to control the URL the user is redirected to on success
-        <input type="hidden" name="_target_path" value="/account"> #}
-        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+			<button type="submit">login</button>
+		</form>
+		<a href="/reset-password">Mot de passe oublié ?</a>
+		<a href="/inscription">Créer nouveau compte</a>
+	</div>
 
 
-
-        <button type="submit">login</button>
-    </form>
 {% endblock %}
-{% endblock %}
-
